# SpaceinvaderRichtig

./: Background.c  Background.h  CMakeLists.txt  button.c  button.h  enemy.c  enemy.h  enemy_entity.c  enemy_entity.h  entity.c  entity.h  gameover.c  gameover.h  health.c  health.h  pew.c  pew.h  player.c  player.h  powerup.c  powerup.h  startframe.c  startframe.h
gamewindow/: init.c  init.h  iterate.c  iterate.h  render.c  update.c  wichitg.h
mainfolder/: events.c  init.c  init.h  quit.c  quit.h  render.c  render.h  update.c  update.h
